--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,37 @@
-.App {
-  text-align: center;
+
+.Table{
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.description{
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.buttons{
+
 }
 
-.App-intro {
-  font-size: large;
+.Number{
+
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Names{
+
+}
+
+.images{
+  border:solid white;
+  border-radius:10px;
+}
+
+.points30{
+
+}
+
+.pointsAllTime{
+
+}
+
+.Copyright{
+
 }
