--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,10 @@
   text-align:center;
   font-family: 'Anton', sans-serif;
 }
+
+.github{
+  width:50px;
+  height:50px;
+  border:solid 0px transparent;
+  background-color:transparent;
+}
