--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
+body{
+  background:linear-gradient(to bottom right,rgb(6, 194, 6) , rgb(20, 224, 20));
+}
+
 
 .Table{
   margin:30px 15% 30px 15%;
-  border: solid silver 2px;
+  border: solid transparent 2px;
+  border-radius:5px;
 }
 
 .Title{
   text-align:center;
   font-family: 'Anton', sans-serif;
   font-size:50px;
-  background-color:green;
   color:white;
   margin:0;
   padding:20px;
@@ -18,6 +22,7 @@
   text-align:center;
   font-family: 'Anton', sans-serif;
   font-size:30px;
+  color:white;
 }
 
 .buttons{
@@ -25,6 +30,7 @@
   background-color:transparent;
   border:solid transparent;
   font-style: italic;
+  color:white;
 }
 
 .emphasized{
@@ -36,7 +42,7 @@
 }
 
 .colorRow{
-  background-color:silver;
+  background-color:rgb(7, 184, 7);
   padding-top:5px;
 }
 
@@ -46,30 +52,36 @@
 
 .Number{
   font-family: 'Anton', sans-serif;
-  font-size:20px;
+  font-size:28px;
+  color:white;
 }
 
 .Names{
   text-align:left;
   font-family: 'Anton', sans-serif;
-  font-size:20px;
+  font-size:28px;
+  color:white;
 }
 
 .images{
-  border:solid darkgreen;
+  border:solid rgb(8, 245, 8);
   border-radius:10px;
   font-size:20px;
   margin-right:10px;
+  width:80px;
+  height:80px;
 }
 
 .points30{
   font-family: 'Anton', sans-serif;
-  font-size:20px;
+  font-size:28px;
+  color:white;
 }
 
 .pointsAllTime{
   font-family: 'Anton', sans-serif;
-  font-size:20px;
+  font-size:28px;
+  color:white;
 }
 
 .Copyright{
